# uHorse

./: .dockerignore  .env.example  .gitignore  API-en.md  API.md  CHANGELOG-en.md  CHANGELOG.md  CHANNELS-en.md  CHANNELS.md  CHANNELS_UPDATE.md  CODEOWNERS  COMPARISON_OPENCLAW.md  CONFIG-en.md  CONFIG.md  CONTRIBUTING-en.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURES_v2.0.md  IMPL_PLAN_v1.1.md  IMPL_PLAN_v2.0.md  INSTALL-en.md  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  LOCAL_SETUP.md  Makefile  PROGRESS.md  README-en.md  README.md  RELEASE_NOTES.md  SECURITY.md  SKILLS-en.md  SKILLS.md  TESTING.md  WIZARD-en.md  WIZARD.md  config.example.toml  docker-compose.yml  install.sh  (+6 more)
crates/openclaw-bin/: Cargo.toml
crates/openclaw-bin/src/: main.rs
crates/openclaw-channel/: Cargo.toml
crates/openclaw-channel/src/: discord.rs  lib.rs  slack.rs  telegram.rs  whatsapp.rs
crates/openclaw-config/: Cargo.toml
crates/openclaw-config/src/: lib.rs  loader.rs  source.rs  validator.rs
crates/openclaw-gateway/: Cargo.toml
crates/openclaw-gateway/src/: http.rs  lib.rs  websocket.rs
crates/openclaw-scheduler/: Cargo.toml
crates/openclaw-scheduler/src/: cron.rs  lib.rs  queue.rs  scheduler.rs
crates/openclaw-security/: Cargo.toml
crates/openclaw-security/src/: approval.rs  auth.rs  idempotency.rs  lib.rs  pairing.rs
crates/openclaw-session/: Cargo.toml
crates/openclaw-session/src/: isolation.rs  lib.rs  manager.rs  store.rs
crates/openclaw-storage/: Cargo.toml
crates/openclaw-storage/src/: jsonl.rs  lib.rs  migration.rs  secret.rs  sqlite.rs
crates/openclaw-tool/: Cargo.toml
crates/openclaw-tool/src/: executor.rs  lib.rs  permission.rs  plugin.rs  registry.rs  tools.rs  validator.rs
crates/uhorse-agent/: ARCHITECTURE.md  Cargo.toml  README.md
crates/uhorse-agent/examples/: bindings_routing.rs  mcp_skills_tools.rs  multi_agent_openclaw.rs  openclaw_style.rs
crates/uhorse-agent/src/: agent.rs  agent_scope.rs  bindings.rs  error.rs  gateway.rs  lib.rs  memory.rs  router.rs  session_key.rs  skill.rs
crates/uhorse-agent/src/mcp/: client.rs  mod.rs  protocol.rs  server.rs  types.rs
crates/uhorse-agent/src/skills/: mod.rs  mod.rs.bak
crates/uhorse-agent/src/tools/: mod.rs
crates/uhorse-backup/: Cargo.toml
crates/uhorse-backup/src/: encryption.rs  lib.rs  replication.rs  restore.rs  scheduler.rs
crates/uhorse-bin/: Cargo.toml
crates/uhorse-bin/src/: main.rs
crates/uhorse-bin/src/cli/: banner.rs  commands.rs  doctor.rs  errors.rs  interactive.rs  mod.rs  output.rs  progress.rs
crates/uhorse-cache/: Cargo.toml
crates/uhorse-cache/src/: lib.rs  policy.rs  redis.rs  session.rs  token_blacklist.rs
crates/uhorse-channel/: Cargo.toml
crates/uhorse-channel/src/: dingtalk.rs  dingtalk.rs.bak  discord.rs  feishu.rs  feishu.rs.bak  lib.rs  registry.rs  slack.rs  telegram.rs  wework.rs  wework.rs.bak  whatsapp.rs
crates/uhorse-config/: Cargo.toml
crates/uhorse-config/src/: distributed.rs  hot_reload.rs  lib.rs  loader.rs  source.rs  validator.rs  versioning.rs  wizard.rs
crates/uhorse-core/: Cargo.toml
crates/uhorse-core/src/: error.rs  lib.rs  protocol.rs  traits.rs  types.rs
crates/uhorse-discovery/: Cargo.toml
crates/uhorse-discovery/src/: consul.rs  error.rs  etcd.rs  failover.rs  health.rs  lib.rs  registry.rs  types.rs
crates/uhorse-gateway/: Cargo.toml
crates/uhorse-gateway/src/: http.rs  lib.rs  middleware.rs  store.rs  websocket.rs
crates/uhorse-gateway/src/api/: mod.rs  routes.rs  types.rs
crates/uhorse-gateway/src/api/handlers/: agents.rs  auth.rs  (+9 more)
crates/uhorse-gateway/src/auth/: audit.rs  jwt.rs  mod.rs  rbac.rs  service.rs  tenant.rs
crates/uhorse-gateway/src/debug_panel/: metrics.rs  mod.rs  websocket.rs
crates/uhorse-gateway/src/lb/: health_aware.rs  least_connection.rs  mod.rs  round_robin.rs  weighted.rs
crates/uhorse-gateway/src/openapi/: generator.rs  mod.rs  spec.rs  ui.rs
crates/uhorse-gateway/src/ratelimit/: distributed.rs  endpoint.rs  global.rs  mod.rs  user.rs
crates/uhorse-gateway/src/skill_editor/: handlers.rs  mod.rs  templates.rs  validator.rs
crates/uhorse-gateway/src/versioning/: compat.rs  deprecation.rs  mod.rs  url.rs
crates/uhorse-gdpr/: Cargo.toml
crates/uhorse-gdpr/src/: classification.rs  consent.rs  erasure.rs  export.rs  lib.rs
crates/uhorse-hub/: Cargo.toml
crates/uhorse-hub/benches/: hub_benchmark.rs
crates/uhorse-hub/src/: error.rs  hub.rs  lib.rs  main.rs  message_router.rs  node_manager.rs  notification_binding.rs  orchestrator.rs  security_integration.rs  session_runtime.rs  task_scheduler.rs
crates/uhorse-hub/src/web/: mod.rs  ws.rs
crates/uhorse-hub/tests/: e2e_test.rs  health_config_test.rs  integration_test.rs  security_test.rs
crates/uhorse-llm/: Cargo.toml
crates/uhorse-llm/src/: anthropic.rs  client.rs  config.rs  gemini.rs  lib.rs
crates/uhorse-multimodal/: Cargo.toml
crates/uhorse-multimodal/src/: document.rs  error.rs  lib.rs  stt.rs  tts.rs  vision.rs
crates/uhorse-node/: Cargo.toml
crates/uhorse-node-desktop/: Cargo.toml
crates/uhorse-node-desktop/src/: app_state.rs  config_store.rs  dto.rs  main.rs
crates/uhorse-node-runtime/: Cargo.toml
crates/uhorse-node-runtime/src/: browser.rs  connection.rs  executor.rs  lib.rs  node.rs  permission.rs  status.rs  versioning.rs  workspace.rs
crates/uhorse-node/src/: connection.rs  error.rs  executor.rs  lib.rs  main.rs  node.rs  permission.rs  status.rs  workspace.rs
crates/uhorse-node/src/tools/: browser.rs  database.rs  mod.rs  skill.rs
crates/uhorse-observability/: Cargo.toml
crates/uhorse-observability/src/: audit.rs  audit_persistent.rs  health.rs  lib.rs  metrics.rs  rotation.rs  shutdown.rs  telemetry.rs  tracing_setup.rs
crates/uhorse-protocol/: Cargo.toml
crates/uhorse-protocol/src/: command.rs  error.rs  lib.rs  message.rs  result.rs  types.rs
crates/uhorse-queue/: Cargo.toml
crates/uhorse-queue/src/: dead_letter.rs  lib.rs  nats.rs  retry.rs  task_queue.rs
crates/uhorse-scheduler/: Cargo.toml
crates/uhorse-scheduler/src/: cron.rs  lib.rs  queue.rs  scheduler.rs
(+194 files in other folders)
