[workspace]
members = [
    "crates/uhorse-core",
    "crates/uhorse-gateway",
    "crates/uhorse-storage",
    "crates/uhorse-session",
    "crates/uhorse-channel",
    "crates/uhorse-tool",
    "crates/uhorse-security",
    "crates/uhorse-scheduler",
    "crates/uhorse-observability",
    "crates/uhorse-config",
    "crates/uhorse-llm",
    "crates/uhorse-agent",
    "crates/uhorse-multimodal",
    "crates/uhorse-bin",
    # uHorse 3.0 - Service Discovery
    "crates/uhorse-discovery",
    # uHorse 3.0 - Distributed Cache
    "crates/uhorse-cache",
    # uHorse 3.0 - Message Queue
    "crates/uhorse-queue",
    # uHorse 3.0 - GDPR Compliance
    "crates/uhorse-gdpr",
    # uHorse 3.0 - Data Governance
    "crates/uhorse-governance",
    # uHorse 3.0 - Backup and Recovery
    "crates/uhorse-backup",
    # uHorse 3.0 - SSO/OAuth2/OIDC/SAML
    "crates/uhorse-sso",
    # uHorse 3.0 - SIEM Integration
    "crates/uhorse-siem",
    # uHorse 3.0 - Webhook Enhancement
    "crates/uhorse-webhook",
    # uHorse 3.0 - Third-party Integration
    "crates/uhorse-integration",
    # uHorse 4.0 - Protocol (Hub-Node Communication)
    "crates/uhorse-protocol",
    # uHorse 4.0 - Local Node Runtime
    "crates/uhorse-node-runtime",
    # uHorse 4.0 - Local Node
    "crates/uhorse-node",
    # uHorse 4.0 - Cloud Hub
    "crates/uhorse-hub",
    # uHorse 4.0 - Node Desktop MVP
    "crates/uhorse-node-desktop",
]
resolver = "2"

[workspace.package]
version = "4.5.1"
edition = "2021"
rust-version = "1.78"
authors = ["uHorse Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kts-kris/uHorse"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.25"
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.23"

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Authentication
jsonwebtoken = "9.0"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
config = "0.14"
toml = "1.1"
serde_yaml = "0.9"

# Async traits
async-trait = "0.1"

# Semver
semver = { version = "1.0", features = ["serde"] }

# JSON Schema
jsonschema = "0.20"

# Cron
cron = "0.12"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Async streaming
async-stream = "0.3"
futures = "0.3"

# System info
sysinfo = "0.32"

# Glob matching
glob-match = "0.2"

# Utilities
derive_more = { version = "1.0", features = ["from", "display"] }
strum = { version = "0.26", features = ["derive"] }
open = "5"

# Dev dependencies
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
split-debuginfo = "unpacked"
