[package]
name = "openclaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenClaw AI Gateway - Binary"

[[bin]]
name = "openclaw"
path = "src/main.rs"

[dependencies]
openclaw-core = { path = "../openclaw-core" }
openclaw-gateway = { path = "../openclaw-gateway" }
openclaw-storage = { path = "../openclaw-storage" }
openclaw-session = { path = "../openclaw-session" }
openclaw-channel = { path = "../openclaw-channel" }
openclaw-tool = { path = "../openclaw-tool" }
openclaw-security = { path = "../openclaw-security" }
openclaw-scheduler = { path = "../openclaw-scheduler" }
openclaw-observability = { path = "../openclaw-observability" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
tokio-stream = "0.1"
toml = "0.8"

# 需要时取消注释
# sqlx = { workspace = true, features = ["sqlite"] }
