[package]
name = "openclaw-channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Channel adapters for OpenClaw AI Gateway"

[dependencies]
openclaw-core = { path = "../openclaw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
teloxide = { version = "0.12", features = ["webhooks"], optional = true }
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
