[package]
name = "openclaw-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for OpenClaw AI Gateway"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
once_cell = "1.19"
dirs = "5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
