[package]
name = "openclaw-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Gateway layer for OpenClaw AI Gateway"

[dependencies]
openclaw-core = { path = "../openclaw-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
futures = "0.3"
semver = { workspace = true }
