[package]
name = "openclaw-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Security layer for OpenClaw AI Gateway"

[dependencies]
openclaw-core = { path = "../openclaw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = "0.4"
rand = "0.8"
