[package]
name = "openclaw-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Session layer for OpenClaw AI Gateway"

[dependencies]
openclaw-core = { path = "../openclaw-core", features = ["sqlx"] }
openclaw-storage = { path = "../openclaw-storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio-stream = "0.1"
