[package]
name = "openclaw-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool execution layer for OpenClaw AI Gateway"

[dependencies]
openclaw-core = { path = "../openclaw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
chrono = "0.4"
