[package]
name = "uhorse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "uHorse AI Gateway - Binary"

[[bin]]
name = "uhorse"
path = "src/main.rs"

[dependencies]
uhorse-core = { path = "../uhorse-core" }
uhorse-gateway = { path = "../uhorse-gateway" }
uhorse-storage = { path = "../uhorse-storage" }
uhorse-session = { path = "../uhorse-session" }
uhorse-channel = { path = "../uhorse-channel" }
uhorse-tool = { path = "../uhorse-tool" }
uhorse-security = { path = "../uhorse-security" }
uhorse-scheduler = { path = "../uhorse-scheduler" }
uhorse-observability = { path = "../uhorse-observability" }
uhorse-config = { path = "../uhorse-config" }
uhorse-llm = { path = "../uhorse-llm" }

tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
tokio-stream = "0.1"
toml = "1.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# 需要时取消注释
# sqlx = { workspace = true, features = ["sqlite"] }
