[package]
name = "uhorse-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for uHorse AI Gateway"

[features]
default = ["etcd"]
etcd = ["dep:etcd-client"]
distributed = ["etcd"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
once_cell = "1.19"
dirs = "6.0"
async-trait = { workspace = true }
etcd-client = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
