[package]
name = "uhorse-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Gateway layer for uHorse AI Gateway"

[dependencies]
uhorse-core = { path = "../uhorse-core" }
uhorse-discovery = { path = "../uhorse-discovery" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
futures = "0.3"
async-stream = "0.3"
semver = { workspace = true }
utoipa = { version = "4", features = ["axum_extras"] }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
