[package]
name = "uhorse-gdpr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GDPR/CCPA compliance for uHorse AI Gateway"

[dependencies]
uhorse-core = { path = "../uhorse-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
