[package]
name = "uhorse-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "uHorse LLM Adapter - OpenAI compatible client"

[dependencies]
uhorse-core = { path = "../uhorse-core" }
uhorse-config = { path = "../uhorse-config" }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.13", features = ["json", "stream"] }
async-trait = "0.1"
url = "2.5"
futures-util = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
