[package]
name = "uhorse-multimodal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-modal support for uHorse (STT/TTS/Vision/Document parsing)"

[dependencies]
uhorse-core = { path = "../uhorse-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
bytes = "1.0"
mime = "0.3"
mime_guess = "2.0"

[dev-dependencies]
tokio-test = { workspace = true }
