[package]
name = "uhorse-node-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "uhorse-node-desktop"
path = "src/main.rs"

[dependencies]
uhorse-node-runtime = { path = "../uhorse-node-runtime" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
