[package]
name = "uhorse-node-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "uhorse-node-desktop"
path = "src/main.rs"

[dependencies]
uhorse-node-runtime = { path = "../uhorse-node-runtime", features = ["browser"] }
uhorse-protocol = { path = "../uhorse-protocol" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
