[package]
name = "uhorse-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "uhorse-node"
path = "src/main.rs"

[dependencies]
uhorse-protocol = { path = "../uhorse-protocol" }
uhorse-core = { path = "../uhorse-core" }

# Async runtime
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Async traits
async-trait = { workspace = true }

# System info
sysinfo = { workspace = true }

# Glob matching
glob-match = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Database drivers (optional features) - use workspace sqlx version
sqlx = { workspace = true, optional = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
mongodb = { version = "2.8", optional = true }

# Browser automation (optional)
headless_chrome = { version = "1.0", optional = true }

# CLI
clap = { workspace = true, features = ["derive"] }

# Logging
tracing-subscriber = { workspace = true }

# Config
toml = { workspace = true }

[features]
default = []
database-sqlite = ["sqlx", "sqlx?/sqlite"]
database-postgres = ["sqlx", "sqlx?/postgres"]
database-mysql = ["sqlx", "sqlx?/mysql"]
database-redis = ["redis"]
database-mongodb = ["mongodb"]
database-full = ["database-sqlite", "database-postgres", "database-mysql", "database-redis", "database-mongodb"]
browser = ["headless_chrome"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
