[package]
name = "uhorse-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Message queue layer for uHorse AI Gateway"

[dependencies]
uhorse-core = { path = "../uhorse-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# NATS client
async-nats = "0.35"

# Random number generation for jitter
rand = "0.10"

[dev-dependencies]
tokio-test = "0.4"
