[package]
name = "uhorse-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Scheduler for uHorse AI Gateway"

[dependencies]
uhorse-core = { path = "../uhorse-core" }
tokio = { workspace = true, features = ["time"] }
serde = { workspace = true }
serde_json = { workspace = true }
cron = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio-cron-scheduler = "0.15"
chrono = "0.4"
